// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course overview asessment label test Question count 1`] = `
<ul
  className="nti-separated-inline-list lesson-overview-questionset-assessment-label"
>
  <li>
    <span
      className="question-count"
    >
      15 Questions
    </span>
  </li>
</ul>
`;

exports[`Course overview asessment label test Question count with correct/incorrect 1`] = `
<ul
  className="nti-separated-inline-list lesson-overview-questionset-assessment-label"
>
  <li>
    <div
      className="submitted"
    >
      <span
        className="correct"
      >
        <i
          className="icon-check-10"
        />
        <span>
          5 Correct
        </span>
      </span>
      <span
        className="incorrect"
      >
        <i
          className="icon-bold-x"
        />
        <span>
          10 Incorrect
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`Course overview asessment label test Question count, required 1`] = `
<ul
  className="nti-separated-inline-list lesson-overview-questionset-assessment-label"
>
  <li>
    <div
      className="lesson-overview-item-required-label"
    >
      Required
    </div>
  </li>
  <li>
    <span
      className="question-count"
    >
      15 Questions
    </span>
  </li>
</ul>
`;

exports[`Course overview asessment label test Question count, required editable 1`] = `
<ul
  className="nti-separated-inline-list lesson-overview-questionset-assessment-label"
>
  <li>
    <div
      aria-haspopup="dialog"
      className="flyout-trigger require-control-value require-control flyout-closed"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <span>
        Optional
      </span>
      <i
        className="icon-chevron-down"
      />
    </div>
  </li>
  <li>
    <span
      className="question-count"
    >
      15 Questions
    </span>
  </li>
</ul>
`;
